# search_engine

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp
src/converter/: converter.cpp  converter.h
src/index/: index.cpp  index.h
src/inverted/: inverted.cpp  inverted.h
src/logger/: logger.cpp
src/parser/: parser.cpp  parser.h
src/relative/: relative.cpp  relative.h
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  TEST_InvertedIndex.cpp  TEST_converter.cpp
